openstack-dashboard/media/dashboard/css/openstack.css
/* ... */
h2{ font-size: 22px; color: #333; }
h3{ font-size: 18px; color: #333; }
h4{ font-size: 14px; color: #333; }

a {	color: #06C; text-decoration: none;}
a:hover { color: #005ab4; text-decoration: underline; }

#wrapper {
	width: 960px;
	margin: 0 auto;
}

.ui-state-highlight, .ui-state-error {
	font-size: 14px;
	width: 625px;
	float: left;
	padding: 17px 20px;
	margin-bottom: 25px;
}

.ui-state-highlight { background: #fcf8d7 !important; }

.ui-state-highlight.success {
	background: #baffd4 !important;
	border: 1px solid #72df9b;
}

.ui-state-error {
	background: #f99 !important;
}

.ui-state-highlight p {
	padding-bottom: 0;
	margin: 0;
}

.close {
	float: right;
	cursor: pointer;
}

p .ui-icon {
	float: left;
	margin-right: 10px;
}


/*==================
  === Header 
  ==================*/

#header {
	font-family: "Helvetica Neue", "Helvetica", Arial;
	margin-top: 20px;
	height: 69px;
}

#header h1 a {
	background: url(../img/logo.gif) no-repeat top left;
	color: #6e6d6e;
	height: 50px;
	display: block;
	font-weight: bold;
	float: left;
	padding: 25px 0 0 85px;
	text-decoration: none;
	margin-bottom: 20px;
}
#header h1 a span { font-weight: normal; }

#user_info {
	float: right;
	width: 190px;
}

#user_info ul {
	font-size: 12px;
	float: left;
	list-style: disc;
	margin-left: 30px;
}


/*==================
  === Content 
  ==================*/

#content_wrap {
	background: #fff;
	float: left;
	width: 960px;
	position: relative;
	margin: 0 0 25px;
	border: 1px solid #ddd;
	-webkit-border-radius: 10px;
	-moz-border-radius: 10px;
	border-radius: 10px;
}

#content {
	float: left;
	padding: 25px;
	width: 670px;
}

#welcome {
	float: left;
	width: 309px;
}

/* Home Page */


#content.home #page_head, #content.login #page_head {
	width: 870px;
	float: left;
}

#content.home {
	width: 910px;
}
.block {
	background-color: #dff2ff;
	border: 1px solid #b1e7ff;
	width: 445px;
	float: left;
}

.block h3 {
	background: url(../img/table_header_bg.png) repeat-x;
	font-size: 14px;
	padding: 5px 0 5px 10px;
	color: #fff;
	text-shadow: #000 0 0 3px;
	width: 435px;
}

#content.home #projects {
	float: left;
	width: 445px;
	margin: 0 0 10px;
}
#content.home #projects li {
	border-bottom: 1px solid #bce3ff;
	margin: 0;
}

.block ul li.odd {
	background: #d2edff;
}

#content.home #projects a	{
	display: block;
	background: url(/media/dashboard/img/server_icon.png) no-repeat 13px 9px;
	padding: 5px 0 5px 58px;
	font-weight: bold;
}

#content.home #projects a:hover {
	color: #052a3d;
	background-color: #b8e1ff;
	text-decoration: none;
}

span.data {
	color: #0d66a9;
	font-size: 11px;
	display: block;
}

#home_login .error, #home_login .errorlist {
	color: #fff;
	background: #ef767d;
	text-align: center;
	border-top: 1px solid #d60004;
	border-bottom: 1px solid #d60004;
	width: 435px;
	margin: 0 0 10px -20px;
	padding: 5px;
}

#home_login fieldset {
	width: 400px;
	padding: 20px;
}

#home_login label {
	display: block;
	margin: 0 0 5px 0;
}

#home_login input {
	height: 25px;
	font-size: 18px;
	margin-bottom: 20px;
	width: 396px;
}

#home_login input[type="submit"], #lnk_register {
	float: right;
	height: 31px;
	background: url(/media/dashboard/img/login_btn.png) top left repeat-x;
	border: 1px solid #206cb5;
	color: #fff;
	font-weight: bold;
	width: 121px;
	font-size: 16px;
	text-shadow: #06416e -1px -1px 2px;
	cursor: pointer;
	margin: 0;
	-webkit-border-radius: 3px;
	-moz-border-radius: 3px;
	-border-radius: 3px;
}

#lnk_register {
	float: none;
	padding: 8px 30px;
	font-size: 14px;
	text-decoration: none;
	margin-left: 39px;
}

#home_login input[type="submit"]:hover, #lnk_register:hover {
	background-position: center left;
}

#home_login input[type="submit"]:active, #lnk_register:active {
	background-position: bottom left;
}

#home_login.reset input[type="submit"]{
	font-size: 12px;
}

#home_login div a {
	margin: 0;
	padding: 0;
	color: #FF8885;
	display: inline;
}

#home_login div a:hover {
	color: red;
}

#forgot_password {
	margin-top: 7px;
	float: left;
	font-size: 12px;
}

.home_block {
	width: 388px;
	float: left;
	margin-left: 25px;
	padding: 25px;
	background: #f1f1f1;
	margin-bottom: 25px;
	-webkit-border-radius: 5px;
	-moz-border-radius: 5px;
	border-radius: 5px;

}

.home_block ul {
	margin-left: 33px;
	list-style: disc;
	color: #999;
	margin-top: 13px;
}

.home_block ul li {
	margin-bottom: 5px;
}

/* User Roles Manager */

#user_edit {
	width: 628px;
}

#user_edit .form-row {
	margin-bottom: 20px;
	float: left;
}

#user_edit #user_name {
	float: left;
	margin-top: 10px;
}

#user_edit label {
	float: left;
	width: 60px;
}

#user_edit h2 {
	font-size: 11px;
	text-align: left;
	padding-left: 10px;
}

#user_edit h3 {
	width: 658px;
}

#user_edit input {
	width: 150px;
}

#user_edit select.filtered {
	width: 270px;
}

#user_edit input[type="submit"] {
	height: 31px;
	margin-right: 0;
}


/* regions */

#region_selector {
	background: #f1f1f1;
	padding: 10px;
	float: left;
	width: 700px;
	-webkit-border-top-right-radius: 10px;
	-moz-border-radius-topright: 10px;
	border-top-right-radius: 10px;
}

span#project_name {
	float: left;
}

#region_form {
	float: right;
}

#region_form label {
	font-weight: bold;
}
#region_form select {
	min-width: 150px;
	padding-left: 10px;
	margin-left: 5px;
}

#page_head {
	background: #f1f1f1;
	float: left;
	width: 630px;
	margin: 0 0 25px;
	padding: 20px;
}

#page_head p {
	margin-top: 11px;
	font-size: 16px;
	line-height: 21px;
	color: #777;
}

#page_head em {
	color: #444;
}

.dash_block {
	float: left;
	width: 267px;
	background-color: #dff2ff;
	border: 1px solid #b1e7ff;
	padding: 20px;
	margin-left: 52px;
	font-size: 12px;
	line-height: 23px;
}

.dash_block.first {
	margin-left: 0;
}

.dash_block h3 {
	background: url(../img/table_header_bg.png) repeat-x 0;
	font-size: 14px;
	padding: 5px 0 5px 10px;
	color: #fff;
	text-shadow: #000 0 0 3px;
	margin-top: -22px;
	margin-left: -20px;
	width: 297px;
	margin-bottom: 11px;
}
/* ... */

